main.css
/****** Begin base style *****/

/*Sets all elements to box-sizing: border box and
sets margin and padding to 0  */

body {
  font-family: Futura, sans-serif ;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  background-color: #85CCFF;

}

p {
  margin: 0;
  padding: 0;
  text-align: center;
}


/****************************
NAV Bar Styling
****************************/

#container {
  display: flex;
  flex-direction: row;
  flex-flow: row wrap;
  justify-content: space-between;
  padding-top: 2vh;
}

#messageBar {
  height: 5vh;
  padding: 0 1vh;
  width:90%;
  margin-left:10%;
}

#deleteMssgsBtn {
  width: 25%;
  border-radius: 5%;
}

#messageContainer {
  display: flex;
  flex-direction: column;
}

.inputMessage {
  width: 35%;
}

.chatty-logo {
  font-family: KiloGram, sans-serif;
  display:inline;
  font-size: 30px;
  width: 40%;
  color: #185AFF;
}

.nav-bar-fix {
  margin-bottom: 3rem;
  display: block;
  width: 100%;
}


/****************************
Message Output Styling
****************************/


#outputMessage {
  font-family: Futura, sans-serif;
  width: 90%;
  height: 60%;
  border: 2px solid black;
  margin: 6rem auto;
}

.message {
  margin: 1.5rem;
}


 /****************************
Message App Styling
****************************/

.darkTheme{
  background-color: darkgray;
  color: white;
}

.largeText{
  font-size: 25px;
}

#container{
  background:gray;
  width:100%;
  position:fixed;
  top: 0;
}

#option-container{
  width:100%;
  margin-left:10%;
}

